--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,32 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div className="container"></div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div className="weather-app">
+      <div className="container">
+        <div className="card">
+          <div className="row">
+          </div>
+          <h2>San Francisco</h2>
+          <div>
+            <li>
+              <ul>Last Updated: Thursday at 18:00</ul>
+              <ul>Sunny</ul>
+            </li>
+          </div>
+          <div>
+            <h1>66</h1>
+            <div>
+              <span className="f-temp">°F</span>
+              <span className="c-temp">°C</span>
+              <li>
+                <ul>Humidity: 71%</ul>
+                <ul>Wind: 14 MPH</ul>
+              </li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  );
   </body>
 </html>
