--- a/public/index.html
+++ b/public/index.html
@@ -58,5 +58,10 @@
       </div>
     </div>
   );
+  <footer>
+    <a href="https://github.com/RonLi5321/weather-react-app">Open-Source Code
+    </a>
+    <p>by Ronna Del Rosario</p>
+  </footer>
   </body>
 </html>
