--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       </div>
   );
   <footer>
-    <a href="https://github.com/RonLi5321/weather-react-app">Open-Source Code
+    <a href="https://github.com/RonLi5321/weather-react-app" target="blank">Open-Source Code
     </a>
     <p>by Ronna Del Rosario</p>
   </footer>
