--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
   <body>
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+    <div className="container">
+
+      <div id="root"></div>
+  </div>
   </body>
 </html>
